# video_generation

./: .gitignore  .gitmodules  CLAUDE.md  README.md  gui-refactor-plan.md  run.sh
.opencode/: opencode.json  opencode.json.md
comfyui_data/custom_nodes/ComfyUI-Manager/: README.md  check.sh  cm-cli.py  git_helper.py  json-checker.py  openapi.yaml  prestartup_script.py  pyproject.toml  requirements.txt  scanner.py
comfyui_data/custom_nodes/ComfyUI-Manager/.github/workflows/: publish-to-pypi.yml
comfyui_data/custom_nodes/ComfyUI-Manager/docs/en/: cm-cli.md  v3.38-userdata-security-migration.md
comfyui_data/custom_nodes/ComfyUI-Manager/docs/ko/: cm-cli.md
comfyui_data/custom_nodes/ComfyUI-Manager/glob/: cnr_utils.py  manager_core.py  manager_migration.py  manager_server.py  manager_util.py  security_check.py  share_3rdparty.py
comfyui_data/custom_nodes/ComfyUI-Manager/js/: cm-api.js  comfyui-manager.js  common.js  components-manager.js  custom-nodes-manager.js  model-manager.js  snapshot.js
comfyui_data/custom_nodes/ComfyUI-Manager/scripts/: install-comfyui-venv-linux.sh  install-comfyui-venv-win.bat
comfyui_data/custom_nodes/ComfyUI-Manager/tests/: test_csrf_content_type_helper.py
comfyui_data/custom_nodes/ComfyUI-RMBG/: README.md  __init__.py  pyproject.toml  requirements.txt  update.md
comfyui_data/custom_nodes/ComfyUI-RMBG/example_workflows/: ComfyUI-RMBG_V2.4.0 new nodes.json  Comfyu-rmbg_v2.9.3_node_sample.json  LoadImage_Node.json  ReferenceLatentMask.json  V2.7.0_ImageStitch.json  V2.7.0_LoadImage.json  V2.8.0_sam2.json  V2.9.0_Matte_matting.json  V3.0.0_nodes.json  YOLO_Node.json  florence2_node.json  image_mask_preview.json
comfyui_data/custom_nodes/ComfyUI-RMBG/models/: modeling_florence2.py
comfyui_data/custom_nodes/ComfyUI-RMBG/py/: AILab_BiRefNet.py  AILab_BodySegment.py  AILab_ClothSegment.py  AILab_ColorToMask.py  AILab_FaceSegment.py  AILab_FashionSegment.py  AILab_Florence2.py  AILab_Florence2Tools.py  AILab_ImageMaskTools.py  AILab_InpaintTools.py  AILab_LamaRemover.py  AILab_RMBG.py  AILab_SAM2Segment.py  AILab_SAM3Segment.py  AILab_SDMatte.py  AILab_Segment.py  AILab_SegmentV2.py  AILab_YoloV8.py  AILab_utils.py
comfyui_data/custom_nodes/Comfyui-Resolution-Master/: CLONE.md  LICENSE  README.md  RESOLUTIONMASTER.md  __init__.py  aztoolkit.py  pyproject.toml
comfyui_data/custom_nodes/Comfyui-Resolution-Master/core/: __init__.py  auto_detect.py  calculation_api.py  dimension_cache.py
comfyui_data/custom_nodes/Comfyui-Resolution-Master/js/: resolution_master.js
(+806 files in other folders)
