[project]
name = "Comfyui-Resolution-Master"
description = "ResolutionMaster is a ComfyUI custom node for resolution, aspect ratio, scaling, preset, and latent control. It provides an interactive canvas, auto-detect workflows, model-specific optimizations, and presets for SDXL, Flux, Flux.2, WAN, HiDream Dev, Qwen-Image, social media, print, cinema, and display resolutions."
version = "1.6.0"
license = { text = "MIT License" }

[project.urls]
Repository = "https://github.com/Azornes/Comfyui-Resolution-Master"

[tool.comfy]
PublisherId = "azornes"
DisplayName = "Comfyui-Resolution-Master"
Icon = ""
